[package]
name = "graphql_cold_chain"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
graphql_core = { path = "../core" }
graphql_types = { path = "../types" }
graphql_asset = { path = "../asset" }

async-graphql = { workspace = true }
chrono = { workspace = true }
regex = "1.10.5"

[dev-dependencies]
actix-rt = { workspace = true }
assert-json-diff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
util = { path = "../../util" }

[features]
default = ["sqlite"]
sqlite = ["repository/sqlite"]
postgres = ["repository/postgres"]

[lints]
workspace = true
