[package]
name = "graphql_core"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
util = { path = "../../util" }

actix-web = { version = "4.0.1", default-features = false, features = ["macros", "cookies"] }
anymap = "0.12"
async-graphql = { version = "3.0.35", features = ["dataloader", "chrono"] }
async-graphql-actix-web = "3.0.35"
async-trait = "0.1.30"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] } 
serde = "1.0.126"
serde_json = "1.0.66"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros" ] }
async-std = "1.9.0" 

[features]
default = ["repository/sqlite"]
postgres = ["repository/postgres"]
