[package]
name = "graphql_core"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
util = { path = "../../util" }

actix-web = { features = ["cookies"], workspace = true }
anymap = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-std = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["repository/sqlite"]
postgres = ["repository/postgres"]
