[package]
name = "graphql_form_schema"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
util = { path = "../../util" }
graphql_core = { path = "../core" }
graphql_types = { path = "../types" }

actix-web = { version = "4.7.0", default-features = false, features = [
    "macros",
] }
async-graphql = { version = "7.0.6", features = ["dataloader", "chrono"] }
async-graphql-actix-web = "7.0.6"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.117"
anyhow.workspace = true

[dev-dependencies]
actix-rt = "2.10.0"
assert-json-diff = "2.0.2"

[features]
default = ["sqlite"]
sqlite = ["repository/sqlite"]
postgres = ["repository/postgres"]
