[package]
name = "graphql_form_schema"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
util = { path = "../../util" }
graphql_core = { path = "../core" }
graphql_types = { path = "../types" }

actix-web = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow.workspace = true

[dev-dependencies]
actix-rt = { workspace = true }
assert-json-diff = "2.0.2"

[features]
default = ["sqlite"]
sqlite = ["repository/sqlite"]
postgres = ["repository/postgres"]
