[package]
name = "graphql_plugin"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
graphql_core = { path = "../core" }
graphql_general = { path = "../general" }

actix-web = { version = "4.0.1", default-features = false, features = [
    "macros",
] }
anymap = "0.12"
async-std = "1.9.0"
async-graphql = { version = "3.0.35", features = ["dataloader", "chrono"] }
async-graphql-actix-web = "3.0.35"
async-trait = "0.1.30"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true }
serde = "1.0.126"
serde_json = "1.0.66"
thiserror = "1.0.30"

[dev-dependencies]
actix-rt = "2.6.0"
assert-json-diff = "2.0.1"


[features]
default = ["repository/sqlite"]
postgres = ["repository/postgres"]
