[package]
name = "graphql_plugin"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
graphql_core = { path = "../core" }


actix-web = { workspace = true }
async-std = "1.9.0"
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
async-trait = "0.1.30"
chrono = { version = "0.4.38", features = ["serde"] }


[dev-dependencies]
actix-rt = "2.10.0"
assert-json-diff = "2.0.1"
serde = "1.0.126"
serde_json = "1.0.117"


[features]
default = ["repository/sqlite"]
postgres = ["repository/postgres"]
