[package]
name = "graphql_plugin"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
graphql_core = { path = "../core" }


actix-web = { workspace = true }
async-std = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
assert-json-diff = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.117"

[features]
default = ["repository/sqlite"]
postgres = ["repository/postgres"]
