[package]
name = "graphql_programs"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
util = { path = "../../util" }
graphql_core = { path = "../core" }
graphql_types = { path = "../types" }

async-std = { workspace = true }
actix-web = { workspace = true }
anymap = "0.12"
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
async-trait = "0.1.30"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.126"
serde_json = "1.0.66"

[dev-dependencies]
actix-rt = "2.6.0"
assert-json-diff = "2.0.1"


[features]
default = ["repository/sqlite"]
postgres = ["repository/postgres"]

[lints]
workspace = true
