[package]
name = "graphql_programs"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]

repository = { path = "../../repository" }
service = { path = "../../service" }
util = { path = "../../util" }
graphql_core = { path = "../core" }
graphql_types = { path = "../types" }

async-std = { workspace = true }
actix-web = { workspace = true }
anymap = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.117"

[dev-dependencies]
actix-rt = { workspace = true }
assert-json-diff = { workspace = true }


[features]
default = ["repository/sqlite"]
postgres = ["repository/postgres"]

[lints]
workspace = true
